// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Field Test: after date set 1`] = `"2012-01-10T23:00:00.000Z"`;

exports[`Text Field Test: after datetime-local set 1`] = `"2018-02-21T23:00:00.000Z"`;

exports[`Text Field Test: after time set 1`] = `"2011-05-05T14:20:00.000Z"`;

exports[`Text Field Test: date with content 1`] = `
<input
  onChange={[Function]}
  type="date"
  value="2012-01-11"
/>
`;

exports[`Text Field Test: datetime-local with content 1`] = `
<input
  onChange={[Function]}
  type="datetime-local"
  value="2018-02-22T00:00"
/>
`;

exports[`Text Field Test: empty datetime-local field 1`] = `
<input
  onChange={[Function]}
  type="date"
  value="2011-05-05"
/>
`;

exports[`Text Field Test: time with content 1`] = `
<input
  onChange={[Function]}
  type="time"
  value="16:20"
/>
`;
